rework file generation so generated sequence length corresponds to sequence length using training generators

--- a/SL2_Z/Data_Generation/generate_SL2_Z.ipynb
+++ b/SL2_Z/Data_Generation/generate_SL2_Z.ipynb
@@ -8,7 +8,12 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import random"
+    "import random\n",
+    "\n",
+    "import sys\n",
+    "sys.path.append('../')\n",
+    "\n",
+    "from util import *"
    ]
   },
   {
@@ -27,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,16 +41,21 @@
     "\n",
     "# x is rank 4, so we don't need to include its inverse\n",
     "\n",
-    "x = np.array([[0, -1], [1, 0]])\n",
-    "y = np.array([[1, 1], [0, 1]])\n",
-    "z = np.array([[1, -1], [0, 1]])\n",
+    "# x = np.array([[0, -1], [1, 0]])\n",
+    "# y = np.array([[1, 1], [0, 1]])\n",
+    "# z = np.array([[1, -1], [0, 1]])\n",
+    "\n",
+    "# generators = (x,y,z)\n",
+    "\n",
+    "generators = k_sl2z_3s_gen\n",
+    "out_fp = './Data_files/points/sl2_Z_3s.csv'\n",
     "\n",
     "identity = np.eye(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,55 +73,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Random walk through ${\\rm SL}_2(\\mathbb{Z})$ to generate matrices in group"
+    "## Random walk through subset of ${\\rm SL}_2(\\mathbb{Z})$ to generate matrices in group"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "random.seed(42)\n",
     "np.random.seed(42)\n",
     "\n",
-    "for _ in range(100000):\n",
+    "k_data_count = 100_000\n",
+    "k_min_walk = 10\n",
+    "k_walk_variance = 10\n",
+    "\n",
+    "last_move = -1\n",
+    "\n",
+    "for _ in range(k_data_count):\n",
     "\n",
     "    first_pos = np.random.randint(0, 3, size=1)[0]\n",
-    "\n",
-    "    if first_pos==0:\n",
-    "        start_matrix = x\n",
-    "    elif first_pos==1:\n",
-    "        start_matrix=y\n",
-    "    elif first_pos==2:\n",
-    "        start_matrix=z\n",
+    "    start_matrix = generators[first_pos]\n",
     "\n",
     "    cur_matrix = start_matrix\n",
     "\n",
-    "    cur_size = np.random.randint(0, 10) + 30\n",
+    "    cur_size = np.random.randint(0, k_walk_variance) + k_min_walk\n",
     "\n",
-    "    a = np.random.randint(0, 3, size=cur_size)\n",
+    "    a = np.random.randint(0, len(generators), size=cur_size)\n",
     "    for i in a: \n",
-    "        if i==0:\n",
-    "            cur_matrix = cur_matrix @ x\n",
-    "        elif i==1:\n",
-    "            cur_matrix = cur_matrix @ y\n",
-    "        elif i==2:\n",
-    "            cur_matrix = cur_matrix @ z\n",
+    "        cur_matrix = cur_matrix @ generators[i]\n",
     "\n",
-    "    df2 = pd.DataFrame([[\n",
-    "            cur_matrix[0][0], \n",
-    "            cur_matrix[0][1], \n",
-    "            cur_matrix[1][0], \n",
-    "            cur_matrix[1][1], \n",
-    "            ]],\n",
+    "    df2 = pd.DataFrame([matrix_to_tuple(cur_matrix)],\n",
     "            columns=['val1', 'val2', 'val3', 'val4'])\n",
     "    data = pd.concat([df2, data])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -144,38 +144,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-2.0</td>\n",
-       "      <td>-3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>-2762.0</td>\n",
+       "      <td>-8775.0</td>\n",
+       "      <td>819.0</td>\n",
+       "      <td>2602.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-3.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>-7.0</td>\n",
+       "      <td>109.0</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>360.0</td>\n",
+       "      <td>109.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-3.0</td>\n",
-       "      <td>-10.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>62767.0</td>\n",
+       "      <td>7227.0</td>\n",
+       "      <td>-11169.0</td>\n",
+       "      <td>-1286.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>47.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>-27.0</td>\n",
-       "      <td>-4.0</td>\n",
+       "      <td>-233.0</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>-8.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>3.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>7.0</td>\n",
+       "      <td>325.0</td>\n",
+       "      <td>-918.0</td>\n",
+       "      <td>1032.0</td>\n",
+       "      <td>-2915.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -186,38 +186,38 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>3.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>11.0</td>\n",
+       "      <td>-19691.0</td>\n",
+       "      <td>5973.0</td>\n",
+       "      <td>-65307.0</td>\n",
+       "      <td>19810.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-2.0</td>\n",
-       "      <td>5.0</td>\n",
+       "      <td>19.0</td>\n",
        "      <td>-3.0</td>\n",
-       "      <td>7.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>-10.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>-6.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>-4.0</td>\n",
-       "      <td>-35.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-1.0</td>\n",
+       "      <td>-89.0</td>\n",
+       "      <td>300.0</td>\n",
+       "      <td>-27.0</td>\n",
+       "      <td>91.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>145.0</td>\n",
+       "      <td>489.0</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>172.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6211.0</td>\n",
+       "      <td>-2013.0</td>\n",
+       "      <td>-975.0</td>\n",
+       "      <td>316.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -225,23 +225,23 @@
        "</div>"
       ],
       "text/plain": [
-       "    val1  val2  val3  val4\n",
-       "0   -2.0  -3.0   1.0   1.0\n",
-       "0   -3.0   4.0   5.0  -7.0\n",
-       "0   -3.0 -10.0   1.0   3.0\n",
-       "0   47.0   7.0 -27.0  -4.0\n",
-       "0    3.0   5.0   4.0   7.0\n",
-       "..   ...   ...   ...   ...\n",
-       "0    3.0   8.0   4.0  11.0\n",
-       "0   -2.0   5.0  -3.0   7.0\n",
-       "0   -1.0   3.0   3.0 -10.0\n",
-       "0    1.0   9.0  -4.0 -35.0\n",
-       "0   -1.0   2.0   0.0  -1.0\n",
+       "       val1    val2     val3     val4\n",
+       "0   -2762.0 -8775.0    819.0   2602.0\n",
+       "0     109.0    33.0    360.0    109.0\n",
+       "0   62767.0  7227.0 -11169.0  -1286.0\n",
+       "0    -233.0    69.0     27.0     -8.0\n",
+       "0     325.0  -918.0   1032.0  -2915.0\n",
+       "..      ...     ...      ...      ...\n",
+       "0  -19691.0  5973.0 -65307.0  19810.0\n",
+       "0      19.0    -3.0     -6.0      1.0\n",
+       "0     -89.0   300.0    -27.0     91.0\n",
+       "0     145.0   489.0     51.0    172.0\n",
+       "0    6211.0 -2013.0   -975.0    316.0\n",
        "\n",
        "[100000 rows x 4 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,72 +252,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.to_csv('./Data_files/sl2_Z.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cols = {\n",
-    "    'val1': [],\n",
-    "    'val2': [],\n",
-    "    'val3' : [],\n",
-    "    'val4': [],\n",
-    "}\n",
-    "\n",
-    "data = pd.DataFrame(cols)\n",
-    "\n",
-    "random.seed(59)\n",
-    "np.random.seed(59)\n",
-    "\n",
-    "for _ in range(10000):\n",
-    "\n",
-    "    first_pos = np.random.randint(0, 3, size=1)[0]\n",
-    "\n",
-    "    if first_pos==0:\n",
-    "        start_matrix = x\n",
-    "    elif first_pos==1:\n",
-    "        start_matrix=y\n",
-    "    elif first_pos==2:\n",
-    "        start_matrix=z\n",
-    "\n",
-    "    cur_matrix = start_matrix\n",
-    "\n",
-    "    cur_size = np.random.randint(0, 10) + 30\n",
-    "\n",
-    "    a = np.random.randint(0, 3, size=cur_size)\n",
-    "    for i in a: \n",
-    "        if i==0:\n",
-    "            cur_matrix = cur_matrix @ x\n",
-    "        elif i==1:\n",
-    "            cur_matrix = cur_matrix @ y\n",
-    "        elif i==2:\n",
-    "            cur_matrix = cur_matrix @ z\n",
-    "\n",
-    "    df2 = pd.DataFrame([[\n",
-    "            cur_matrix[0][0], \n",
-    "            cur_matrix[0][1], \n",
-    "            cur_matrix[1][0], \n",
-    "            cur_matrix[1][1], \n",
-    "            ]],\n",
-    "            columns=['val1', 'val2', 'val3', 'val4'])\n",
-    "    data = pd.concat([df2, data])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data.to_csv('./Data_files/sl2_Z_test.csv', index=False)"
+    "data.to_csv(out_fp, index=False)"
    ]
   }
  ],
