fix test plots mcts

--- a/Euclidean/Alex/deep_mcts.ipynb
+++ b/Euclidean/Alex/deep_mcts.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "id": "9d75afc8",
    "metadata": {},
    "outputs": [],
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 54,
    "id": "438fdf1c04168299",
    "metadata": {
     "collapsed": false
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 55,
    "id": "05e3ddf7",
    "metadata": {},
    "outputs": [],
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "id": "f19bdb93248565c7",
    "metadata": {
     "collapsed": false
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 56,
    "id": "9e004f8a",
    "metadata": {},
    "outputs": [],
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 57,
    "id": "41211b20",
    "metadata": {},
    "outputs": [
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "7e933c6f",
    "metadata": {},
    "outputs": [],
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "4bcbd88a",
    "metadata": {},
    "outputs": [],
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 51,
    "id": "c191e6c845a0bd24",
    "metadata": {
     "ExecuteTime": {
@@ -683,7 +683,7 @@
     "        action_plot.append([])\n",
     "    for i in X:\n",
     "        for j in Y:\n",
-    "            rv = policy_fn(torch.tensor([i,j],dtype=torch.float)).reshape(1,len(actions)).to(device)\n",
+    "            rv = policy_fn(torch.tensor([i,j],dtype=torch.float).unsqueeze(0)).reshape(1,len(actions)).to(device)\n",
     "            action_plot[torch.argmax(rv)].append((i.cpu(),j.cpu()))\n",
     "    for i in range(len(action_plot)):\n",
     "        action = np.array(action_plot[i])\n",
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 52,
    "id": "1368c1aa3c071299",
    "metadata": {
     "ExecuteTime": {
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 58,
    "id": "caa3d0f193cdda2a",
    "metadata": {
     "collapsed": false
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "6bb7c4b36c7d9707",
    "metadata": {
     "collapsed": false
@@ -819,11 +819,18 @@
     "\n",
     "db4 = torch.linspace(-k_dbound_size/2, k_dbound_size/2, k_dbound_size+1).to(device)\n",
     "quad_dbs = [db4, db4]\n",
-    "run_test(quad_file, k_4actions, policy_fn=policy_fn_4, cases=k_cases)\n",
+    "run_test(quad_file, k_4actions, policy_fn=lambda a: torch.argmax(value_fn_4(a)), cases=k_cases)\n",
     "            \n",
     "# run_test(quad_file, k_4actions, policy_fn=lambda a: oh_encode(torch.tensor(determine_action(a.flatten())).view((1,1)),4), cases=k_cases, dbs=quad_dbs)\n",
     "# # 8% accuracy on Donald test csv"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
