--- a/SL2_Z/Q_learning/deep_Q_learning.ipynb
+++ b/SL2_Z/Q_learning/deep_Q_learning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,6 +31,21 @@
     "base_fp = base_dir + '../points/sl2_Z_3s.csv'\n",
     "test_fp = base_dir + 'sl2_Z_3s_test.csv'\n",
     "train_fp = base_dir + 'sl2_Z_3s_train.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MAX_REWARD = 100\n",
+    "STEP_PENALTY = -1\n",
+    "\n",
+    "def get_reward(state: torch.Tensor) -> tuple[int, bool]:\n",
+    "    if state.eq(torch.eye(2)):\n",
+    "        return (MAX_REWARD, True)\n",
+    "    return (STEP_PENALTY, False)"
    ]
   },
   {
@@ -43,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,6 +113,9 @@
     "        # Experience Replay Buffers and parameters\n",
     "        self.memory = deque()\n",
     "       \n",
+    "    def predict(self, x: torch.Tensor) -> torch.Tensor:\n",
+    "        return self.mainModel.forward(x)\n",
+    "\n",
     "    def epsilon_greedy_search(self, state):\n",
     "        if torch.rand(1) <= self.epsilon:\n",
     "            return int(NUM_GENERATORS * torch.rand(1))\n",
@@ -146,20 +164,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class DeepQAgenttester: \n",
-    "    def __init__(self, agent: DeepQAgent, batch_size) -> None:\n",
-    "        self.batch_size = batch_size\n",
+    "class DeepQAgentTrainer: \n",
+    "    def __init__(self, agent: DeepQAgent, actions: list[torch.Tensor], train_matrices: torch.Tensor, batch_size: int):\n",
     "        self.agent = agent\n",
-    "        pass"
+    "        self.actions = actions\n",
+    "        self.train_matrices = train_matrices\n",
+    "        self.batch_size = batch_size\n",
+    "        self.total_episodes = 0\n",
+    "    \n",
+    "    def play(self, episodes: int, replay_periodicity: int, max_game_len: int):\n",
+    "        '''\n",
+    "        episodes - The number of episodes or 'games' played by the agent to train\n",
+    "        replay_periodicity - The number of episodes after which weights will be updated\n",
+    "        '''\n",
+    "        sample_idxs = torch.randint(0, self.train_matrices.shape[0], (episodes, ))\n",
+    "        for episode in torch.arange(0, episodes):\n",
+    "            mat = self.train_matrices[sample_idxs[episode]]\n",
+    "\n",
+    "            steps = 0\n",
+    "            done = False\n",
+    "            while steps < max_game_len and not done:\n",
+    "                pred = self.agent.predict(mat).argmax(dim=0)\n",
+    "                action = self.actions[pred]\n",
+    "                next_mat = torch.matmul(mat, action)\n",
+    "                reward, done = get_reward(mat)\n",
+    "                self.agent.remember(mat, action, reward, next_mat, done)\n",
+    "                steps += 1\n",
+    "\n",
+    "            self.agent.replay()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +212,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# All matrices\n",
+    "matrices_all = torch.tensor(df.values, dtype=torch.float64).reshape(100000, 2, 2)\n",
+    "\n",
+    "# Training matrices and labels\n",
+    "train_data = torch.tensor(train_df.values, dtype=torch.float64)\n",
+    "labels_train = train_data[:,-1]\n",
+    "matrices_train = train_data[:,0:-2].reshape(train_data.shape[0], 2, 2)\n",
+    "\n",
+    "# Testing matrices and labels\n",
+    "test_data = torch.tensor(test_df.values, dtype=torch.float64)\n",
+    "labels_test = test_data[:,-1]\n",
+    "matrices_test = test_data[:,0:-2].reshape(test_data.shape[0], 2, 2)\n",
+    "\n",
+    "# Visualization vectors\n",
+    "basis_vec = torch.tensor([[1, 0]], dtype=torch.float64)\n",
+    "vecs_all = matrices_all.matmul(basis_vec.T)\n",
+    "vecs_train = matrices_train.matmul(basis_vec.T)\n",
+    "vecs_test = matrices_test.matmul(basis_vec.T)\n",
+    "x_train = vecs_train[:, 0]\n",
+    "x_test = vecs_test[:, 0]\n",
+    "y_train = vecs_train[:, 1]\n",
+    "y_test = vecs_test[:, 1]\n",
+    "\n",
+    "# Training data masks to zoom plot\n",
+    "train_mask1 = x_train < 500\n",
+    "train_mask2 = x_train > -500\n",
+    "train_mask3 = y_train < 500\n",
+    "train_mask4 = y_train > -500\n",
+    "train_mask = train_mask1 & train_mask2 & train_mask3 & train_mask4\n",
+    "\n",
+    "# Testing data mask to zoom plot\n",
+    "test_mask1 = x_test < 500\n",
+    "test_mask2 = x_test > -500\n",
+    "test_mask3 = y_test < 500\n",
+    "test_mask4 = y_test > -500\n",
+    "test_mask = test_mask1 & test_mask2 & test_mask3 & test_mask4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -226,43 +311,7 @@
     }
    ],
    "source": [
-    "# All matrices\n",
-    "matrices_all = torch.tensor(df.values, dtype=torch.float64).reshape(100000, 2, 2)\n",
-    "\n",
-    "# Training matrices and labels\n",
-    "train_data = torch.tensor(train_df.values, dtype=torch.float64)\n",
-    "labels_train = train_data[:,-1]\n",
-    "matrices_train = train_data[:,0:-2].reshape(train_data.shape[0], 2, 2)\n",
-    "\n",
-    "# Testing matrices and labels\n",
-    "test_data = torch.tensor(test_df.values, dtype=torch.float64)\n",
-    "labels_test = test_data[:,-1]\n",
-    "matrices_test = test_data[:,0:-2].reshape(test_data.shape[0], 2, 2)\n",
-    "\n",
-    "# Visualization vectors\n",
-    "basis_vec = torch.tensor([[1, 0]], dtype=torch.float64)\n",
-    "vecs_all = matrices_all.matmul(basis_vec.T)\n",
-    "vecs_train = matrices_train.matmul(basis_vec.T)\n",
-    "vecs_test = matrices_test.matmul(basis_vec.T)\n",
-    "x_train = vecs_train[:, 0]\n",
-    "x_test = vecs_test[:, 0]\n",
-    "y_train = vecs_train[:, 1]\n",
-    "y_test = vecs_test[:, 1]\n",
-    "\n",
-    "# Training data masks to zoom plot\n",
-    "train_mask1 = x_train < 500\n",
-    "train_mask2 = x_train > -500\n",
-    "train_mask3 = y_train < 500\n",
-    "train_mask4 = y_train > -500\n",
-    "train_mask = train_mask1 & train_mask2 & train_mask3 & train_mask4\n",
-    "\n",
-    "# Testing data mask to zoom plot\n",
-    "test_mask1 = x_test < 500\n",
-    "test_mask2 = x_test > -500\n",
-    "test_mask3 = y_test < 500\n",
-    "test_mask4 = y_test > -500\n",
-    "test_mask = test_mask1 & test_mask2 & test_mask3 & test_mask4\n",
-    "\n",
+    "# Plot data\n",
     "plt.scatter(vecs_all[:, 0], vecs_all[:, 1])\n",
     "plt.xlabel('X Coordinate')\n",
     "plt.ylabel('Y Coordinate')\n",
@@ -342,6 +391,114 @@
     "plt.grid(True)\n",
     "plt.show()\n",
     "print(labels_train[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dqa = DeepQAgent(learning_rate=0.99, epsilon=1, epsilon_decay=0.999, min_epsilon=.3, discount_factor=.99, batch_size=100, memory_capacity=10_000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "U = torch.tensor([[1, 3], [0, 1]], dtype=torch.float64)\n",
+    "T = torch.tensor([[1, 0], [3, 1]], dtype=torch.float64)\n",
+    "U_INV = U.inverse()\n",
+    "T_INV = T.inverse()\n",
+    "\n",
+    "generators = [U, T, U_INV, T_INV]\n",
+    "\n",
+    "agen_trainer = DeepQAgentTrainer(dqa, generators, matrices_train, 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "mat1 and mat2 must have the same dtype",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[1;32m/Users/noahjillson/Desktop/MXM_AI_Ellenberg/SL2_Z/Q_learning/deep_Q_learning.ipynb Cell 15\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/noahjillson/Desktop/MXM_AI_Ellenberg/SL2_Z/Q_learning/deep_Q_learning.ipynb#X20sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m agen_trainer\u001b[39m.\u001b[39mplay(\u001b[39m100\u001b[39m, \u001b[39m10\u001b[39m, \u001b[39m50\u001b[39m)\n",
+      "\u001b[1;32m/Users/noahjillson/Desktop/MXM_AI_Ellenberg/SL2_Z/Q_learning/deep_Q_learning.ipynb Cell 15\u001b[0m line \u001b[0;36m2\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/noahjillson/Desktop/MXM_AI_Ellenberg/SL2_Z/Q_learning/deep_Q_learning.ipynb#X20sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m done \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/noahjillson/Desktop/MXM_AI_Ellenberg/SL2_Z/Q_learning/deep_Q_learning.ipynb#X20sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m \u001b[39mwhile\u001b[39;00m steps \u001b[39m<\u001b[39m max_game_len \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m done:\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/noahjillson/Desktop/MXM_AI_Ellenberg/SL2_Z/Q_learning/deep_Q_learning.ipynb#X20sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m     pred \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39magent\u001b[39m.\u001b[39mpredict(mat)\u001b[39m.\u001b[39margmax(dim\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/noahjillson/Desktop/MXM_AI_Ellenberg/SL2_Z/Q_learning/deep_Q_learning.ipynb#X20sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m     action \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mactions[pred]\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/noahjillson/Desktop/MXM_AI_Ellenberg/SL2_Z/Q_learning/deep_Q_learning.ipynb#X20sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m     next_mat \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mmatmul(mat, action)\n",
+      "\u001b[1;32m/Users/noahjillson/Desktop/MXM_AI_Ellenberg/SL2_Z/Q_learning/deep_Q_learning.ipynb Cell 15\u001b[0m line \u001b[0;36m3\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/noahjillson/Desktop/MXM_AI_Ellenberg/SL2_Z/Q_learning/deep_Q_learning.ipynb#X20sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mpredict\u001b[39m(\u001b[39mself\u001b[39m, x: torch\u001b[39m.\u001b[39mTensor) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m torch\u001b[39m.\u001b[39mTensor:\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/noahjillson/Desktop/MXM_AI_Ellenberg/SL2_Z/Q_learning/deep_Q_learning.ipynb#X20sZmlsZQ%3D%3D?line=29'>30</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmainModel\u001b[39m.\u001b[39mforward(x)\n",
+      "\u001b[1;32m/Users/noahjillson/Desktop/MXM_AI_Ellenberg/SL2_Z/Q_learning/deep_Q_learning.ipynb Cell 15\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/noahjillson/Desktop/MXM_AI_Ellenberg/SL2_Z/Q_learning/deep_Q_learning.ipynb#X20sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward\u001b[39m(\u001b[39mself\u001b[39m, x: torch\u001b[39m.\u001b[39mTensor) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m torch\u001b[39m.\u001b[39mTensor:\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/noahjillson/Desktop/MXM_AI_Ellenberg/SL2_Z/Q_learning/deep_Q_learning.ipynb#X20sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstack(x)\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/torch/nn/modules/module.py:1501\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1496\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1497\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1498\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_pre_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks\n\u001b[1;32m   1499\u001b[0m         \u001b[39mor\u001b[39;00m _global_backward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1500\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1501\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[1;32m   1502\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[1;32m   1503\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/torch/nn/modules/container.py:217\u001b[0m, in \u001b[0;36mSequential.forward\u001b[0;34m(self, input)\u001b[0m\n\u001b[1;32m    215\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39minput\u001b[39m):\n\u001b[1;32m    216\u001b[0m     \u001b[39mfor\u001b[39;00m module \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m:\n\u001b[0;32m--> 217\u001b[0m         \u001b[39minput\u001b[39m \u001b[39m=\u001b[39m module(\u001b[39minput\u001b[39m)\n\u001b[1;32m    218\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39minput\u001b[39m\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/torch/nn/modules/module.py:1501\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1496\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1497\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1498\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_pre_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks\n\u001b[1;32m   1499\u001b[0m         \u001b[39mor\u001b[39;00m _global_backward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1500\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1501\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[1;32m   1502\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[1;32m   1503\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/torch/nn/modules/linear.py:114\u001b[0m, in \u001b[0;36mLinear.forward\u001b[0;34m(self, input)\u001b[0m\n\u001b[1;32m    113\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39minput\u001b[39m: Tensor) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m Tensor:\n\u001b[0;32m--> 114\u001b[0m     \u001b[39mreturn\u001b[39;00m F\u001b[39m.\u001b[39mlinear(\u001b[39minput\u001b[39m, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mweight, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbias)\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: mat1 and mat2 must have the same dtype"
+     ]
+    }
+   ],
+   "source": [
+    "agen_trainer.play(100, 10, 50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'DeepQAgent' object has no attribute 'predict'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m/Users/noahjillson/Desktop/MXM_AI_Ellenberg/SL2_Z/Q_learning/deep_Q_learning.ipynb Cell 16\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/noahjillson/Desktop/MXM_AI_Ellenberg/SL2_Z/Q_learning/deep_Q_learning.ipynb#X21sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m dqa\u001b[39m.\u001b[39mpredict(U)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'DeepQAgent' object has no attribute 'predict'"
+     ]
+    }
+   ],
+   "source": [
+    "dqa.predict(U)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TestCls:\n",
+    "    def __init__(self):\n",
+    "        self.a = 3\n",
+    "    def get_a(self):\n",
+    "        return self.a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tc = TestCls()\n",
+    "tc.get_a()"
    ]
   },
   {
