train nn directly off q table

--- a/SL2_Z/Q_learning/subset_Q_learning_for_SL2_Z.ipynb
+++ b/SL2_Z/Q_learning/subset_Q_learning_for_SL2_Z.ipynb
@@ -116,39 +116,39 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-2.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <th>0</th>\n",
+       "      <td>-227.0</td>\n",
+       "      <td>-520.0</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>197.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>-2.0</td>\n",
+       "      <th>1</th>\n",
+       "      <td>29.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>29.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1657.0</td>\n",
+       "      <td>298.0</td>\n",
+       "      <td>-506.0</td>\n",
+       "      <td>-91.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-43.0</td>\n",
+       "      <td>16.0</td>\n",
        "      <td>8.0</td>\n",
        "      <td>-3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>-12.0</td>\n",
-       "      <td>-2.0</td>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>-3.0</td>\n",
+       "      <th>4</th>\n",
+       "      <td>65.0</td>\n",
+       "      <td>-112.0</td>\n",
+       "      <td>148.0</td>\n",
+       "      <td>-255.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -158,63 +158,63 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9949</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-8.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <th>99995</th>\n",
+       "      <td>-1171.0</td>\n",
+       "      <td>492.0</td>\n",
+       "      <td>-2868.0</td>\n",
+       "      <td>1205.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9971</th>\n",
-       "      <td>-27.0</td>\n",
-       "      <td>-20.0</td>\n",
-       "      <td>-4.0</td>\n",
-       "      <td>-3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9974</th>\n",
-       "      <td>-7.0</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>-4.0</td>\n",
-       "      <td>17.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9988</th>\n",
-       "      <td>-7.0</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>-7.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9989</th>\n",
+       "      <th>99996</th>\n",
        "      <td>9.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>-2.0</td>\n",
+       "      <td>-4.0</td>\n",
        "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99997</th>\n",
+       "      <td>-19.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>-8.0</td>\n",
+       "      <td>21.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99998</th>\n",
+       "      <td>25.0</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>37.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99999</th>\n",
+       "      <td>601.0</td>\n",
+       "      <td>-282.0</td>\n",
+       "      <td>-130.0</td>\n",
+       "      <td>61.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>847 rows × 4 columns</p>\n",
+       "<p>100000 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      val1  val2  val3  val4\n",
-       "9      1.0   0.0  -2.0   1.0\n",
-       "22     5.0  -2.0   8.0  -3.0\n",
-       "28     5.0 -12.0  -2.0   5.0\n",
-       "34     1.0   2.0   2.0   5.0\n",
-       "37     1.0  -2.0   2.0  -3.0\n",
-       "...    ...   ...   ...   ...\n",
-       "9949   1.0  -8.0   0.0   1.0\n",
-       "9971 -27.0 -20.0  -4.0  -3.0\n",
-       "9974  -7.0  30.0  -4.0  17.0\n",
-       "9988  -7.0  24.0   2.0  -7.0\n",
-       "9989   9.0   4.0   2.0   1.0\n",
+       "         val1   val2    val3    val4\n",
+       "0      -227.0 -520.0    86.0   197.0\n",
+       "1        29.0   12.0    70.0    29.0\n",
+       "2      1657.0  298.0  -506.0   -91.0\n",
+       "3       -43.0   16.0     8.0    -3.0\n",
+       "4        65.0 -112.0   148.0  -255.0\n",
+       "...       ...    ...     ...     ...\n",
+       "99995 -1171.0  492.0 -2868.0  1205.0\n",
+       "99996     9.0   -2.0    -4.0     1.0\n",
+       "99997   -19.0   50.0    -8.0    21.0\n",
+       "99998    25.0   66.0    14.0    37.0\n",
+       "99999   601.0 -282.0  -130.0    61.0\n",
        "\n",
-       "[847 rows x 4 columns]"
+       "[100000 rows x 4 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,6 +451,112 @@
     "                       train_fp,\n",
     "                       test_fp,\n",
     "                       env)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train nn directly off q-table\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SL2Z_NN(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(SL2Z_NN, self).__init__()\n",
+    "\n",
+    "        self.stack = nn.Sequential(\n",
+    "            nn.Linear(4, 128, bias=True),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(128, 64, bias=True),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(64, 16, bias=True),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(16, 4, bias=True),\n",
+    "        )\n",
+    "\n",
+    "        self.activation = nn.Softmax(dim=1)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.stack(x)\n",
+    "        return self.activation(x)\n",
+    "\n",
+    "def train_model(model, criterion, dataloader, num_epochs=100, learning_rate=0.01, viz_accuracy=False):\n",
+    "    optimizer = optim.SGD(model.parameters(), lr=learning_rate)\n",
+    "\n",
+    "    scheduler = optim.lr_scheduler.ExponentialLR(optimizer, gamma=0.995)\n",
+    "    losses = []\n",
+    "\n",
+    "    # Training loop\n",
+    "    for epoch in range(num_epochs):\n",
+    "        total_loss = 0.0\n",
+    "        for batch_inputs, batch_desired_outputs in dataloader:\n",
+    "            optimizer.zero_grad()\n",
+    "            outputs = model(batch_inputs.unsqueeze(0))\n",
+    "\n",
+    "            loss = criterion(outputs.view(batch_desired_outputs.shape), batch_desired_outputs)\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "            cur_item = loss.item()\n",
+    "            total_loss += cur_item\n",
+    "        \n",
+    "        scheduler.step()\n",
+    "        average_loss = total_loss / len(dataloader)\n",
+    "        if viz_accuracy:\n",
+    "            losses.append(average_loss)\n",
+    "        if (epoch+1) % 50 == 0:\n",
+    "            print(f'Epoch [{epoch+1}/{num_epochs}], Loss: {average_loss:.4f}')\n",
+    "    \n",
+    "    if viz_accuracy:\n",
+    "        plt.scatter(x=range(1, len(losses)+1), y=losses)\n",
+    "        plt.xlabel(\"Epoch\")\n",
+    "        plt.ylabel(\"Average loss\")\n",
+    "        plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "\n",
+    "class QDataset(Dataset):\n",
+    "    def __init__(self, qenv):\n",
+    "        self.qenv = qenv\n",
+    "        self.keys = list(self.qenv.Q_table.keys())\n",
+    "    \n",
+    "    def __len__(self):\n",
+    "        return len(self.qenv.Q_table.keys())\n",
+    "    \n",
+    "    def __getitem__(self, index):\n",
+    "        state = tuple_to_matrix(self.keys[index])\n",
+    "        out = self.qenv.best_move(state)\n",
+    "        return state.flatten().float(), nn.functional.one_hot(torch.tensor(out), 4).float()\n",
+    "\n",
+    "dataset = QDataset(env)\n",
+    "dataloader = DataLoader(dataset, batch_size=32, shuffle=True)\n",
+    "znet = SL2Z_NN()\n",
+    "loss = nn.CrossEntropyLoss()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_model(znet, loss, dataset, 500, learning_rate=0.0005, viz_accuracy=True)"
    ]
   }
  ],
